--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-.gradle
-/build/
-
 # Ignore Gradle GUI config
 gradle-app.setting
 
@@ -9,6 +6,18 @@ gradle-app.setting
 
 # Cache of project
 .gradletasknamecache
+.gradle
+**/build/
+
+# eclipse project files
+.classpath
+.project
+.settings
+
+
+#vscode
+.vscode
+/bin/
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
